# MiniProject

./: .gitignore  CMakeLists.txt  README.md  download_Platform.sh
buildcache/: CMakeCache.txt  Makefile  cmake_install.cmake
buildcache/src/: Makefile  cmake_install.cmake
cmake/: toolchain.cmake
code/inc/: file_priority.h
code/src/: can_frame_trans.cpp  file_priority.cpp  main.cpp
project_func/can_frame/inc/: can_frame_trans.h  vos_typedef.h
public_func/: CMakeLists.txt
public_func/inc/: public_def.h  string_public_func.h
public_func/src/: string_public_func.cpp
script/: cmake_cfg_build.sh  cmake_run.sh  init_env.sh  public_config.sh
src/: CMakeLists.txt  main.cpp
